--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,20 @@
 <resources>
     <string name="app_name">PlantScanner</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="camera_placeholder">Camera Placeholder</string>
+    <string name="gallery_placeholder">Gallery Placeholder</string>
+    <string name="history_placeholder">History Placeholder</string>
+
+    <string name="notifications">Notifications</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="language">Language</string>
+    <string name="send_feedback">Send Feedback</string>
+
+    <string name="home_screen_title">Home</string>
+    <string name="gallery_screen_title">Gallery</string>
+    <string name="camera_screen_title">Camera</string>
+    <string name="settings_screen_title">Settings</string>
+
+    <string name="send_button_text">Send</string>
+    <string name="email">Email</string>
+    <string name="feedback">Feedback</string>
 </resources>
