camera options + ai model

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,7 +3,6 @@
     <string name="app_name">PlantScanner</string>
     <string name="camera_placeholder">Место для экрана Камеры</string>
     <string name="gallery_placeholder">Место для экрана Галерея</string>
-    <string name="history_placeholder">Место для Главного экрана</string>
 
     <string name="notifications">Уведомления</string>
     <string name="dark_mode">Тёмная тема</string>
@@ -12,7 +11,7 @@
 
     <string name="home_screen_title">Дом</string>
     <string name="gallery_screen_title">Галерея</string>
-    <string name="camera_screen_title">Камера</string>
+    <string name="camera_screen_title">Настройки Камеры</string>
     <string name="settings_screen_title">Настройки</string>
 
     <string name="send_button_text">Отправить</string>
