--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">PlantScanner</string>
     <string name="camera_placeholder">Camera Placeholder</string>
     <string name="gallery_placeholder">Gallery Placeholder</string>
-    <string name="history_placeholder">History Placeholder</string>
 
     <string name="notifications">Notifications</string>
     <string name="dark_mode">Dark Mode</string>
@@ -11,7 +10,7 @@
 
     <string name="home_screen_title">Home</string>
     <string name="gallery_screen_title">Gallery</string>
-    <string name="camera_screen_title">Camera</string>
+    <string name="camera_screen_title">Camera Settings</string>
     <string name="settings_screen_title">Settings</string>
 
     <string name="send_button_text">Send</string>
