--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,14 @@
 
     <string name="home_screen_title">Home</string>
     <string name="gallery_screen_title">Gallery</string>
-    <string name="camera_screen_title">Camera Settings</string>
+    <string name="camera_screen_title">Camera settings</string>
     <string name="settings_screen_title">Settings</string>
+    <string name="disease_screen_title">About disease</string>
 
     <string name="send_button_text">Send</string>
     <string name="email">Email</string>
     <string name="feedback">Feedback</string>
+
+    <string name="symptoms">Symptoms</string>
+    <string name="treatment">Treatment</string>
 </resources>
