--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,25 +3,29 @@
     <string name="camera_placeholder">Camera Placeholder</string>
     <string name="gallery_placeholder">Gallery Placeholder</string>
 
+    <!--    Settings Fragment-->
     <string name="notifications">Notifications</string>
     <string name="dark_mode">Dark Mode</string>
     <string name="language">Language</string>
     <string name="send_feedback">Send Feedback</string>
 
+    <!--    Top Action Bar-->
     <string name="home_screen_title">Home</string>
     <string name="gallery_screen_title">Gallery</string>
     <string name="camera_screen_title">Camera settings</string>
     <string name="settings_screen_title">Settings</string>
     <string name="disease_screen_title">About disease</string>
 
+    <!--    Feedback Fragment-->
     <string name="send_button_text">Send</string>
     <string name="email">Email</string>
     <string name="feedback">Feedback</string>
 
-<!--    Disease Fragment-->
+    <!--    Disease Fragment-->
     <string name="symptoms">Symptoms</string>
     <string name="treatment">Treatment</string>
 
+    <!--    Camera Settings-->
     <string name="apples">Apple</string>
     <string name="banana">Banana</string>
     <string name="cherry">Cherry</string>
@@ -31,4 +35,7 @@
     <string name="peach">Peach</string>
     <string name="potato">Potato</string>
     <string name="pepper">Pepper</string>
+
+    <!--    Some Text-->
+    <string name="longTextPlaceHolder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
 </resources>
