--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,13 @@
 <resources>
     <string name="app_name">Florascope</string>
-    <string name="camera_placeholder">Camera Placeholder</string>
-    <string name="gallery_placeholder">Gallery Placeholder</string>
 
     <!--    Settings Fragment-->
-    <string name="notifications">Notifications</string>
     <string name="dark_mode">Dark Mode</string>
     <string name="language">Language</string>
     <string name="send_feedback">Send Feedback</string>
 
-    <!--    Top Action Bar-->
+    <!--    Action Bars-->
     <string name="home_screen_title">Home</string>
-    <string name="gallery_screen_title">Gallery</string>
     <string name="camera_screen_title">Camera settings</string>
     <string name="settings_screen_title">Settings</string>
     <string name="disease_screen_title">About disease</string>
