--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="peach">Peach</string>
     <string name="potato">Potato</string>
     <string name="pepper">Pepper</string>
+    <string name="watermelon">Watermelon</string>
 
     <!--    Some Text-->
     <string name="longTextPlaceHolder" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
